css para el boton datatable

--- a/librerias/sidebars.css
+++ b/librerias/sidebars.css
@@ -106,8 +106,6 @@ main {
     --bs-card-spacer-y: 1.2rem;
     --bs-card-spacer-x: 1.5rem;
     --bs-card-cap-padding-y: 0.1rem;
-    --bs-card-cap-bg: rgba(76, 150, 217);
-    --bs-card-border-color: rgba(76, 150, 217);
 }
 
 .btn {
@@ -118,3 +116,8 @@ main {
 .input-field{
       margin-bottom: 5px;
 }
+.btn-group, .btn-group-vertical{
+  position: absolute !important;
+  width: 10%; 
+}
+
