--- a/librerias/sidebars.css
+++ b/librerias/sidebars.css
@@ -120,4 +120,41 @@ main {
   position: absolute !important;
   width: 10%; 
 }
+/*--BOTON CSS--*/
+.btnn{
+  position: relative;
+  padding: 8px 50px;
+  text-decoration: none;
+  background-color: #151E3F;
+  color: #fff;
+  letter-spacing: 10px;
+  text-indent: 10px;
+  z-index: 2;
+}
 
+/*-----------boton 1----------*/
+
+.btn-1{
+  overflow: hidden;
+  border: 3px solid #03cc57;
+  z-index: 2;
+}
+
+
+.btn-1::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 200%;
+  left: 0;
+  top: -200%;
+  background-color: #03cc57;
+  border-radius: 50%;
+  transition: all 0.6s ease;
+  z-index: -1;
+}
+
+.btn-1:hover:before{
+  top: 0;
+  border-radius: 0%;
+}
